[improve][fn] Optimize Function Worker startup by lazy loading and direct zip/bytecode access (#22122)
(cherry picked from commit bbc62245c5ddba1de4b1e7cee4ab49334bc36277)
(cherry picked from commit 597cfa1488401c7682c588b6cb59b2ebf82fdff3)

(cherry picked from commit d608bfcebb989a1dc909630da5b89db5145ab9d7)

 Conflicts:
	pulsar-broker/pom.xml
	pulsar-functions/localrun/src/main/java/org/apache/pulsar/functions/LocalRunner.java
	pulsar-functions/runtime/src/main/java/org/apache/pulsar/functions/runtime/thread/ThreadRuntime.java
	pulsar-functions/runtime/src/main/java/org/apache/pulsar/functions/runtime/thread/ThreadRuntimeFactory.java
	pulsar-functions/runtime/src/main/java/org/apache/pulsar/functions/worker/FunctionsManager.java
	pulsar-functions/utils/src/main/java/org/apache/pulsar/functions/utils/FunctionCommon.java
	pulsar-functions/utils/src/main/java/org/apache/pulsar/functions/utils/FunctionConfigUtils.java
	pulsar-functions/utils/src/main/java/org/apache/pulsar/functions/utils/SinkConfigUtils.java
	pulsar-functions/utils/src/main/java/org/apache/pulsar/functions/utils/functions/FunctionArchive.java
	pulsar-functions/utils/src/main/java/org/apache/pulsar/functions/utils/functions/FunctionUtils.java
	pulsar-functions/utils/src/main/java/org/apache/pulsar/functions/utils/io/ConnectorUtils.java
	pulsar-functions/utils/src/test/java/org/apache/pulsar/functions/utils/FunctionCommonTest.java
	pulsar-functions/utils/src/test/java/org/apache/pulsar/functions/utils/FunctionConfigUtilsTest.java
	pulsar-functions/utils/src/test/java/org/apache/pulsar/functions/utils/SinkConfigUtilsTest.java
	pulsar-functions/worker/pom.xml
	pulsar-functions/worker/src/main/java/org/apache/pulsar/functions/worker/rest/api/ComponentImpl.java
	pulsar-functions/worker/src/main/java/org/apache/pulsar/functions/worker/rest/api/FunctionsImpl.java
	pulsar-functions/worker/src/main/java/org/apache/pulsar/functions/worker/rest/api/SinksImpl.java
	pulsar-functions/worker/src/main/java/org/apache